--- a/express_backend/.env
+++ b/express_backend/.env
@@ -1,5 +1,5 @@
 DB_HOST = localhost
-DB_USER = allgood
-DB_PASS = allgood
+DB_USER = sonavarghese
+DB_PASS =
 DB_NAME = final_project
 DB_PORT = 5432
