Commit changes to .env

--- a/express_backend/.env
+++ b/express_backend/.env
@@ -1,5 +1,5 @@
 DB_HOST = localhost
-DB_USER = sonavarghese
-DB_PASS =
+DB_USER = development
+DB_PASS = development
 DB_NAME = final_project
 DB_PORT = 5432
